# VideoProcessing

./: .clang-format  CMakeLists.txt
lib/: CMakeLists.txt
lib/FFmpeg/: CMakeLists.txt
src/: load_frame.cpp  load_frame.hpp  main.cpp
